apps/traefik/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: { { .Values.namespace } }
spec:
  type: { { .Values.service.type } }
  ports:
    - protocol: TCP
      port: { { .Values.service.port } }
      targetPort: 80
    - protocol: TCP
      port: { { .Values.service.httpsPort } }
      targetPort: 443
  selector:
    app: traefik
