apps/traefik/templates/ingress-dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: { { .Values.namespace } }
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: traefik.home.cwbtech.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
  tls:
    - hosts:
        - traefik.home.cwbtech.net
      secretName: dashboard-cert
